{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 42,
  "lineage": "e227e126-9245-b775-099b-1a915eb4e79e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].deployment-us",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0050ba20bcc0e2d6c",
            "association_id": "eipassoc-0244cacf2fb46123d",
            "domain": "vpc",
            "id": "eipalloc-0050ba20bcc0e2d6c",
            "instance": "i-096c5b263d673392b",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0af6ef655714014e1",
            "private_dns": "ip-172-31-15-199.eu-west-2.compute.internal",
            "private_ip": "172.31.15.199",
            "public_dns": "ec2-35-177-215-23.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.215.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ssh_tunnel",
            "aws_key_pair.my_key",
            "aws_security_group.ssh_sg",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ssh_tunnel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].deployment-us",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cfd0973db26b893b",
            "arn": "arn:aws:ec2:eu-west-2:858186782168:instance/i-096c5b263d673392b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096c5b263d673392b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af6ef655714014e1",
            "private_dns": "ip-172-31-15-199.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.15.199",
            "public_dns": "ec2-3-8-91-25.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.91.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aff4d1eb10deca7f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ssh-security-group-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07386b740b690d80a",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ee433edc749646e5"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.ssh_sg",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "documentdb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].deployment-us",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:858186782168:security-group/sg-026721cbe98892f31",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-026721cbe98892f31",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "documentdb20231213162135317200000001",
            "name_prefix": "documentdb",
            "owner_id": "858186782168",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c8f2ad8d34f2fd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mongodb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].deployment-us",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:858186782168:security-group/sg-0ee433edc749646e5",
            "description": "SSH Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee433edc749646e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-security-group-1",
            "name_prefix": "",
            "owner_id": "858186782168",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02650992125fdee70"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mongodb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].deployment-us",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:858186782168:subnet/subnet-09c4c6ac947d67ec3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c4c6ac947d67ec3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858186782168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05c8f2ad8d34f2fd8"
          },
          "dependencies": [
            "aws_vpc.mongodb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mongodb_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].deployment-us",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:858186782168:vpc/vpc-05c8f2ad8d34f2fd8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02550b4859e2475b7",
            "default_route_table_id": "rtb-0fd1ef522221aca65",
            "default_security_group_id": "sg-0268e26f38c696604",
            "dhcp_options_id": "dopt-002e3e67827a07b74",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c8f2ad8d34f2fd8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd1ef522221aca65",
            "owner_id": "858186782168"
          }
        }
      ]
    }
  ]
}